--- a/libghemical/libghemical.vcproj
+++ b/libghemical/libghemical.vcproj
@@ -1,97 +1,282 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="9,00"
 	Name="libghemical"
 	ProjectGUID="{10310473-5BC5-4721-A726-23743BFA3866}"
-	Keyword="Win32Proj">
+	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
+		<Platform
+			Name="x64"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
 			IntermediateDirectory="Debug"
 			ConfigurationType="4"
-			CharacterSet="2">
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../mpqc-2.3.0\src\lib"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
-				MinimalRebuild="TRUE"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="5"
-				RuntimeTypeInfo="TRUE"
+				RuntimeLibrary="1"
+				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="4"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/../../libghemical.lib"/>
+				OutputFile="$(OutDir)/../../libghemical.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="4"
-			CharacterSet="2">
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../mpqc-2.3.0\src\lib"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
-				RuntimeLibrary="4"
-				RuntimeTypeInfo="TRUE"
+				RuntimeLibrary="0"
+				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="3"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/../../libghemical.lib"/>
+				OutputFile="$(OutDir)/../../libghemical.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Debug|x64"
+			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			ConfigurationType="4"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPreBuildEventTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCCustomBuildTool"
+			/>
 			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
+				Name="VCXMLDataGeneratorTool"
+			/>
 			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TargetEnvironment="3"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="../mpqc-2.3.0\src\lib"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
+				MinimalRebuild="true"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="1"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLibrarianTool"
+				OutputFile="$(OutDir)/../../libghemical.lib"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|x64"
+			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			ConfigurationType="4"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TargetEnvironment="3"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="../mpqc-2.3.0\src\lib"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
+				RuntimeLibrary="0"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLibrarianTool"
+				OutputFile="$(OutDir)/../../libghemical.lib"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -100,209 +285,276 @@
 		<Filter
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
 			<File
-				RelativePath=".\src\atom.cpp">
+				RelativePath=".\src\atom.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\bond.cpp">
+				RelativePath=".\src\bond.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\boundary_opt.cpp">
+				RelativePath=".\src\boundary_opt.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\conjgrad.cpp">
+				RelativePath=".\src\conjgrad.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_mm.cpp">
+				RelativePath=".\src\eng1_mm.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_mm_default.cpp">
+				RelativePath=".\src\eng1_mm_default.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_mm_prmfit.cpp">
+				RelativePath=".\src\eng1_mm_prmfit.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_mm_tripos52.cpp">
+				RelativePath=".\src\eng1_mm_tripos52.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_qm.cpp">
+				RelativePath=".\src\eng1_qm.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_qm_mopac.cpp">
+				RelativePath=".\src\eng1_qm_mopac.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_qm_mpqc.cpp">
+				RelativePath=".\src\eng1_qm_mpqc.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng2_mm_sf.cpp">
+				RelativePath=".\src\eng2_mm_sf.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng2_qm_mm.cpp">
+				RelativePath=".\src\eng2_qm_mm.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\engine.cpp">
+				RelativePath=".\src\engine.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\fileio.cpp">
+				RelativePath=".\src\fileio.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\geomopt.cpp">
+				RelativePath=".\src\geomopt.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\intcrd.cpp">
+				RelativePath=".\src\intcrd.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\model.cpp">
+				RelativePath=".\src\model.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\moldyn.cpp">
+				RelativePath=".\src\moldyn.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\notice.cpp">
+				RelativePath=".\src\notice.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\pop_ana.cpp">
+				RelativePath=".\src\pop_ana.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\resonance.cpp">
+				RelativePath=".\src\resonance.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\search.cpp">
+				RelativePath=".\src\search.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\seqbuild.cpp">
+				RelativePath=".\src\seqbuild.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\streamio.cpp">
+				RelativePath=".\src\streamio.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\tab_mm_default.cpp">
+				RelativePath=".\src\tab_mm_default.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\tab_mm_prmfit.cpp">
+				RelativePath=".\src\tab_mm_prmfit.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\tab_mm_tripos52.cpp">
+				RelativePath=".\src\tab_mm_tripos52.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\typerule.cpp">
+				RelativePath=".\src\typerule.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\src\utility.cpp">
+				RelativePath=".\src\utility.cpp"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
 			<File
-				RelativePath=".\src\atom.h">
+				RelativePath=".\src\atom.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\bond.h">
+				RelativePath=".\src\bond.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\boundary_opt.h">
+				RelativePath=".\src\boundary_opt.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\conjgrad.h">
+				RelativePath=".\src\conjgrad.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_mm.h">
+				RelativePath=".\src\eng1_mm.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_mm_default.h">
+				RelativePath=".\src\eng1_mm_default.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_mm_prmfit.h">
+				RelativePath=".\src\eng1_mm_prmfit.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_mm_tripos52.h">
+				RelativePath=".\src\eng1_mm_tripos52.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_qm.h">
+				RelativePath=".\src\eng1_qm.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_qm_mopac.h">
+				RelativePath=".\src\eng1_qm_mopac.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng1_qm_mpqc.h">
+				RelativePath=".\src\eng1_qm_mpqc.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng2_mm_sf.h">
+				RelativePath=".\src\eng2_mm_sf.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\eng2_qm_mm.h">
+				RelativePath=".\src\eng2_qm_mm.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\engine.h">
+				RelativePath=".\src\engine.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\geomopt.h">
+				RelativePath=".\src\geomopt.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\intcrd.h">
+				RelativePath=".\src\intcrd.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\libconfig.h">
+				RelativePath=".\src\libconfig.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\libdefine.h">
+				RelativePath=".\src\libdefine.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\model.h">
+				RelativePath=".\src\model.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\moldyn.h">
+				RelativePath=".\src\moldyn.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\notice.h">
+				RelativePath=".\src\notice.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\pop_ana.h">
+				RelativePath=".\src\pop_ana.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\resonance.h">
+				RelativePath=".\src\resonance.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\search.h">
+				RelativePath=".\src\search.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\seqbuild.h">
+				RelativePath=".\src\seqbuild.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\StdAfx.h">
+				RelativePath=".\src\StdAfx.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\tab_mm_default.h">
+				RelativePath=".\src\tab_mm_default.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\tab_mm_prmfit.h">
+				RelativePath=".\src\tab_mm_prmfit.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\tab_mm_tripos52.h">
+				RelativePath=".\src\tab_mm_tripos52.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\typedef.h">
+				RelativePath=".\src\typedef.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\typerule.h">
+				RelativePath=".\src\typerule.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\utility.h">
+				RelativePath=".\src\utility.h"
+				>
 			</File>
 			<File
-				RelativePath=".\src\v3d.h">
+				RelativePath=".\src\v3d.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
+			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+			>
 		</Filter>
 		<File
-			RelativePath=".\ReadMe.txt">
+			RelativePath=".\ReadMe.txt"
+			>
 		</File>
 	</Files>
 	<Globals>
